# adv_mla_lab_2

./: pyproject.toml  setup.py
docs/: conf.py
models/: adaboost_default.joblib  prophet_default.joblib  prophet_holiday.joblib  prophet_month.joblib
notebooks/: 36120_AdvMLA_Lab2_Exercise2_Instructions.ipynb  36120_AdvMLA_Lab2_Exercise3_Instructions.ipynb  36120_Lab2_Ex2_Solutions.ipynb  36120_Lab2_Ex3_Solutions.ipynb
