[tool.poetry]
name = "adv-mla-lab-2"
version = "0.1.0"
description = "using my own package for data science"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "adv_mla_lab_2"}]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "3.6.3"
pandas = "2.0.1"
scikit-learn = "1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
